Tue Dec  3 10:13:19 CET 2013
scons-2.3.0-i486-1_microlinux.txz: Added.
imlib2-1.4.5-i486-1_microlinux.txz: Added.
lua-5.1.5-i486-1_microlinux.txz: Added.
tolua++-1.0.93-i486-1_microlinux.txz: Added.
conky-1.9.0-i486-1_microlinux.txz: Added.
smplayer-0.8.6-i486-1_microlinux.txz: Added.
libsigc++-2.2.11-i486-1_microlinux.txz: Added.
glibmm-2.36.2-i486-1_microlinux.txz: Added.
cairomm-1.10.0-i486-1_microlinux.txz: Added.
pangomm-2.34.0-i486-1_microlinux.txz: Added.
atkmm-2.22.7-i486-1_microlinux.txz: Added.
mm-common-0.9.6-noarch-1_microlinux.txz: Added.
gtkmm-2.24.4-i486-1_microlinux.txz: Added.
BeautifulSoup-3.2.1-i486-1_microlinux.txz: Added.
lxml-3.2.4-i486-1_microlinux.txz: Added.
gsl-1.16-i486-1_microlinux.txz: Added.
numpy-1.8.0-i486-1_microlinux.txz: Added.
inkscape-0.48.4-i486-1_microlinux.txz: Added.
mlt-0.9.0-i486-1_microlinux.txz: Added.
pyxdg-0.25-i486-1_microlinux.txz: Added.
goocanvas-0.15-i486-1_microlinux.txz: Added.
pygoocanvas-0.14.1-i486-1_microlinux.txz: Added.
openshot-1.4.3-i486-1_microlinux.txz: Added.
+---------------------------+
Mon Dec  2 18:52:44 CET 2013
libmusicbrainz3-3.0.3-i486-1_microlinux.txz: Added.
+---------------------------+
Mon Dec  2 17:29:46 CET 2013
libmusicbrainz-2.1.5-i486-1_microlinux.txz: Added.
vcdimager-0.7.24-i486-1_microlinux.txz: Added.
wxGTK-2.8.12-i486-1_microlinux.txz: Added.
soundtouch-1.7.1-i486-1_microlinux.txz: Added.
audacity-2.0.5-i486-1_microlinux.txz: Added.
+---------------------------+
Mon Dec  2 07:44:03 CET 2013
audacious-3.4.2-i486-1_microlinux.txz: Rebuilt.
libcue-1.3.0-i486-1_microlinux.txz: Added.
libmms-0.6.2-i486-1_microlinux.txz: Added.
audacious-plugins-3.4.2-i486-1_microlinux.txz: Rebuilt.
+---------------------------+
Sun Dec  1 07:07:32 CET 2013
a52dec-0.7.4-i486-1_microlinux.txz: Added.
libdv-1.0.0-i486-1_microlinux.txz: Added.
libmpeg2-0.5.1-i486-1_microlinux.txz: Added.
faad2-2.7-i486-1_microlinux.txz: Added.
libquicktime-1.2.4-i486-1_microlinux.txz: Added.